reset game now functional, fixed cards stuck open, img/layout changes

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,14 +2,12 @@ body {
 	background: url("seamless-pattern2.jpg") #d2dcff;
     background-repeat: repeat;
     height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16px;
-	color: #426cdb;
+    font-family: 'Courier Prime', monospace;
+    font-size: 17px;
+	color: #000932;
 	display: flex;
 	justify-content: center;
 }
-
-
 
 
 .grid {
@@ -19,27 +17,30 @@ body {
     justify-content: space-between;
     width: 650px;
     height: 500px;
-    border: none;
+    border: 2px solid rgba(194, 194, 211, .65);
     padding: 25px;
-    border-radius: 25px;
+    border-radius: 35px;
     background-color: white;
+    perspective: 1000px;
 }
 
-#winner {
-    font-size: 25px;
-    font-weight: 600;
-    color: #007FD9;
-}
 
 img.card {
     width: 150px;
     height: 150px;
 	filter: drop-shadow(2px 3px 3px rgb(184, 184, 209));
+    transform-style: preserve-3d;
+    transition: transform .5s;
+}
+
+img.card.flip {
+    transform: rotateY(180deg) scaleX(-1);
 }
 
 .edition {
     font-size: 18px;
     font-weight: 600;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 
 .container {
@@ -49,8 +50,9 @@ img.card {
     width: 400px;
     height: auto;
 	padding: 6px;
-    margin-top: 6px;
-    margin-bottom: 6px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border: 2px solid rgba(194, 194, 211, .65);
 }
 
 .centered {
@@ -64,7 +66,7 @@ img.card {
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 45px;
-    margin-top: -15px;
+    margin-top: -8px;
     text-align: center;
 }
 
@@ -74,26 +76,29 @@ img.card {
 
 
 #resetBtn {
+    background-image: radial-gradient(100% 100% at 100% 0, #878fe9 0, #4b52bb 100%);
     border: none;
-    line-height: 0px;
-    width: 175px;
+    width: 155px;
     padding-top: 8px;
-    border-radius: 15px;
-    background-color: #4b52bb;
+    padding-bottom: 11px;
+    box-shadow: rgba(45, 35, 66, .4) 0 2px 4px,rgba(45, 35, 66, .3) 0 7px 13px -3px,rgba(58, 65, 111, .5) 0 -3px 0 inset;
+    border-radius: 5px;
+    background-color: #6d74db;
     font-size: 16px;
     color: #FFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #resetBtn:active {
     transform: scale(0.90);
-  }
+}
 
 #resetBtn:hover {
-    transition-duration: 0.1s;
-    background-color: #2a3088;
-  }
+    background-image: radial-gradient(100% 100% at 100% 0, #232a85 0, #4b52bb 100%);  
+}
 
-  
 
 .overlay {
     position: fixed;
@@ -108,7 +113,7 @@ img.card {
     opacity: 1;
     visibility: hidden;
     transition: all .33s ease-out;
-    transform: scale(1.2);
+    transform: scale(1.2);    
 }
 
 body.overlay-is-open .overlay {
@@ -116,6 +121,22 @@ body.overlay-is-open .overlay {
     visibility: visible;
     transform: scale(1);
 }
+
+body.overlay-is-open .blur {
+    filter: blur(5px);
+}
+
+
+.overlay-inner {
+    color: #4b52bb;
+    font-size: 25px;
+    font-weight: 600;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+
 
 
 @media only screen and (max-width: 600px) {
@@ -127,18 +148,28 @@ body.overlay-is-open .overlay {
         border: none;
         padding: 25px;
         border-radius: 25px;
-        background-color: white;   
+        background-color: white;
+        border: 2px solid rgba(194, 194, 211, .65);   
     }
 
     .container {
         background: #fff;
         border-radius: 10px;
         color: #000;
-        width: 200px;
+        width: 300px;
         height: auto;
         padding: 6px;
-        margin-top: 6px;
-        margin-bottom: 6px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        border: 2px solid rgba(194, 194, 211, .65);
+    }
+
+    .banner {
+        max-width: 90%;
+    }
+
+    .edition {
+        font-size: 17px;
     }
     
 }
